--- a/Bootcamp/Android/Weekly_Project/app/build.gradle
+++ b/Bootcamp/Android/Weekly_Project/app/build.gradle
@@ -34,7 +34,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    implementation 'commons-io:commons-io:2.5'
+
 
 }
